<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TriggerCampaign.TriggerCampaignActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/purple_500"
        android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar"
        app:navigationIcon="?attr/homeAsUpIndicator"
        app:navigationIconTint="@color/white"
        app:title="@string/trigger"
        app:titleTextColor="@color/white" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sendTriggerEventButton"
                style="@style/DemoActionButton"
                android:layout_marginHorizontal="0dp"
                android:text="@string/send_trigger" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/addAlertButton"
                style="@style/DemoActionButton"
                android:layout_marginHorizontal="0dp"
                android:text="Add Alert" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/enableTriggerButton"
                style="@style/DemoActionButton"
                android:layout_marginHorizontal="0dp"
                android:text="@string/enable_automated_notification" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/disableTriggerButton"
                style="@style/DemoActionButton"
                android:layout_marginHorizontal="0dp"
                android:text="@string/disable_automated_notification" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
